--- a/scss/module/_boximage.scss
+++ b/scss/module/_boximage.scss
@@ -1,7 +1,10 @@
-.box_image {
+.box__image {
   background: url(../../img/nightroad.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 1000px;
+    background-size: cover;
+      background-position: center;
+      height: 100vh;
+  &-filter {
+    background-color: rgba(0, 0, 0, 0.542);
+    height: 100vh;
+  }
 }
