--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,15 @@ a {
 .header__inner {
   display: flex;
   justify-content: space-between;
+  font-family: "Anton", serif;
 }
 .header__logo {
-  color: #C9A3AF;
+  color: #ffffff;
   float: left;
   padding: 30px 100px;
 }
 .header__logo a {
-  color: #C9A3AF;
+  color: #ffffff;
   font-size: 32px;
 }
 
@@ -31,7 +32,7 @@ a {
   padding: 35px 100px;
 }
 .gnav__list-item {
-  color: #C9A3AF;
+  color: #ffffff;
   font-size: 20px;
   padding: 15px 40px;
   text-transform: uppercase;
@@ -39,18 +40,27 @@ a {
 
 .main {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  height: 600px;
+  padding-top: 15%;
 }
 .main__visual-title {
   position: relative;
   text-align: center;
-  font-size: 3rem;
-  font-weight: bold;
-  color: #C9A3AF;
-  right: 300px;
+  font-size: 100px;
+  font-family: "Anton", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #ffffff;
   z-index: 10;
+}
+.main__visual-text {
+  text-align: center;
+  font-size: 70.5px;
+  font-family: "Libre Barcode 39", serif;
+  font-weight: 100px;
+  font-style: normal;
+  color: #ffffff;
 }
 
 .box__image {
