--- a/scss/module/_gnav.scss
+++ b/scss/module/_gnav.scss
@@ -4,7 +4,7 @@
     list-style: none;
     padding: 35px 100px;
     &-item {
-      color: #C9A3AF;
+      color: #ffffff;
       font-size: 20px;
       padding: 15px 40px;
       text-transform: uppercase;
