--- a/scss/module/_main.scss
+++ b/scss/module/_main.scss
@@ -1,17 +1,26 @@
 .main {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  height: 600px;
+  padding-top: 15%;
   &__visual {
     &-title {
       position: relative;
-        text-align: center;
-        font-size: 3rem;
-        font-weight: bold;
-        color: #C9A3AF;
-        right: 300px;
-        z-index: 10;
+      text-align: center;
+      font-size: 100px;
+      font-family: "Anton", serif;
+      font-weight: 400;
+      font-style: normal;
+      color: #ffffff;
+      z-index: 10;
       }
+    &-text {
+      text-align: center;
+      font-size: 70.5px;
+      font-family: "Libre Barcode 39", serif;
+      font-weight: 100px;
+      font-style: normal;
+      color: #ffffff;
+    }
   }
 }
